2018.06.06.002:fix display laout on mobile

--- a/src/pages/search/search.scss
+++ b/src/pages/search/search.scss
@@ -35,6 +35,7 @@ page-search {
         border-style: solid none none none; // font-size: 16px; 
     }
     .box-head {
+        padding-top: 5px !important;
         font-size: 14px;
         font-weight: bold;
         color: #000;
